# gtk_photo_edit

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
.zed/: settings.json
assets/: .gitignore
src/: Filters.cpp  Filters.h  Worker.cpp  Worker.h  hello_window.cpp  hello_window.h  image_frame.cpp  image_frame.h  main.cpp  sliders_frame.cpp  sliders_frame.h
